--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -20,7 +20,7 @@
 
     <Button
         android:layout_marginTop="30dp"
-        android:id="@+id/button2"
+        android:id="@+id/gotocat"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
