--- a/app/src/main/res/layout/my_text_view.xml
+++ b/app/src/main/res/layout/my_text_view.xml
@@ -33,9 +33,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="10dp"
-                android:background="#B9FFEA00"
                 android:text="resturaunt"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#000000"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_anchor="@+id/catImage"
