--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,6 +9,6 @@
     app:navigationContentDescription="@string/abc_action_bar_up_description"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:title="catagery"
+    app:title="Category"
     app:titleTextColor="@color/colorAccent"
     android:gravity="center"/>
