--- a/app/src/main/res/layout/my_text_view.xml
+++ b/app/src/main/res/layout/my_text_view.xml
@@ -22,7 +22,7 @@
 
             <ImageView
                 android:id="@+id/catImage"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/resturnat_logo" />
@@ -34,6 +34,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="resturaunt"
+                android:background="#C9FFFFFF"
                 android:textColor="#000000"
                 android:textSize="40sp"
                 android:textStyle="bold"
