--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -53,12 +53,14 @@
             android:text="@string/contDeatils"
             android:layout_marginBottom="20dp"/>
         <TextView
+            android:id="@+id/email_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:text="@string/email"
             android:layout_marginBottom="20dp"/>
         <TextView
+            android:id="@+id/description_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
