--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.huparidiary.ui.home.HomeFragment"
+        android:name="com.mibtech.huparidiary.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_category"
-        android:name="com.example.huparidiary.ui.category_page.CategoryRedirect"
+        android:name="com.mibtech.huparidiary.ui.category_page.CategoryRedirect"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_category" />
 
     <fragment
         android:id="@+id/nav_contact"
-        android:name="com.example.huparidiary.ui.contactUs.ContactUsFragment"
+        android:name="com.mibtech.huparidiary.ui.contactUs.ContactUsFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_contact_us" />
 </navigation>
