--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -87,6 +87,7 @@
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
+               android:gravity="center"
                android:background="#00E5FF"
                android:text="@string/call"/>
 
@@ -95,6 +96,7 @@
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
+               android:gravity="center"
                android:layout_margin="10dp"
                android:background="#00E5FF"
                android:text="@string/maps" />
