--- a/app/src/main/res/layout/upload_item_dialog.xml
+++ b/app/src/main/res/layout/upload_item_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="299dp"
+    android:layout_width="match_parent"
     android:background="#28FFC500"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
@@ -56,7 +56,7 @@
                         android:id="@+id/itemImage_dialog"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:src="@drawable/background" />
+                        android:src="@drawable/ic_baseline_image_24" />
                 </androidx.coordinatorlayout.widget.CoordinatorLayout>
                 <TextView
                     android:layout_width="match_parent"
